--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <p class="subhead">Southern Finland is full of elegant luxury homes. But what do you get with €1M+ from rural Finland?</p>
         </div>
         <div class="byline">
-            <p>By <a href="https://jonathansoma.com">Veera Tegelberg</a></p>
+            <p>By <a href="https://github.com/TegelVee/millionhomes">Veera Tegelberg</a></p>
         </div>
         <p>Almost 500 homes worth €1,000,000 or more were for sale in Finland in the end of July 2024, 
             according to a home listing web page <a href="https://asunnot.oikotie.fi/myytavat-asunnot">Oikotie</a>. 
